objects/maps__AssignmentRule__c.object
<CustomObject>
    <fields>
        <fullName>maps__Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>maps__AssignmentPlan__c</fullName>
        <label>Maps Assignment Plan</label>
        <referenceTo>maps__AssignmentPlan__c</referenceTo>
        <relationshipLabel>Maps Assignment Rules</relationshipLabel>
        <relationshipName>AssignmentRules</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>maps__ShapeLayer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Maps Shape Layer</label>
        <referenceTo>maps__ShapeLayer__c</referenceTo>
        <relationshipLabel>Assignment Rules</relationshipLabel>
        <relationshipName>AssignmentRules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>maps__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>AssignmentRules</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Maps Assignment Rule</label>
    <listViews>
        <fullName>maps__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Maps Assignment Rule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Maps Assignment Rules</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>